[package]
name = "prompt-leak"
version = "0.1.0"
edition = "2024"
description = "System prompt exfiltration agent — Kali Linux LLM red team tool"

[[bin]]
name = "prompt-leak"
path = "src/main.rs"

[dependencies]
tokio   = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
clap        = { version = "4", features = ["derive"] }
colored     = "2"
regex       = "1"
chrono      = { version = "0.4", features = ["serde"] }
rand        = "0.8"
async-trait = "0.1"
